--- a/index.html
+++ b/index.html
@@ -3,154 +3,116 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Pelumi's Site</title>
+  <title>Fatokun Pelumi</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
-  <table cellspacing="20">
-    <td><img src="My Picture.jpg" alt="Fatokun Pelumi's Picture"></td>
-    <td>
-      <h1><strong>Fatokun Pelumi</strong></h1>
-      <p>+2347085784087 | <a href="jpfatoks@gmail.com">jpfatoks@gmail.com</a> | No 1 Olutunu Street, Agosasa, Ipokia L.G., Ogun State, Nigeria.</p>
-    </td>
-  </table>
-  <br>
-  <center>
-    <p><strong>EDUCATION </strong></p>
-  </center>
-  <hr />
-  <strong>Bells University of Technology 300 Level</strong><br>Currently acquiring B. Tech in Computer Science and Information Technology <p> <strong>High School Diploma at Ronik Comprehensive College, Ejigbo Lagos
-      State, Nigeria.</strong></p>
+  <div class="div0">
+    <h1>Hi I'm Pelumi</h1>
+    <p>a programmer</p>
+  </div>
 
-  <p>
-    <center><strong>TECHNICAL SKILLS</strong></center>
-    <hr>
-    Analysis Tool: Python, MS PowerPoint, MS Excel <br>
-    Programming: MS Word, MS PowerPoint, MS Access, Python, Atom
+  <div class="middle-container">
+    <div class="profile">
+      <img class="mypicture" src="My Picture.jpg" alt="Fatokun Pelumi's Picture">
+      <h2>Hello.</h2>
+      <p class="aboutme">My name's Fatokun Pelumi Joseph. I'm a computer science student of the Bells University of Technology in my penultimate year. I'm a goal and task driven person
+        with good people skills, a good eye for details and an inquisitive mind.</p>
+    </div>
+    <hr class="headerruler">
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skilllist">
 
-    <br>
-    <br>
-  </p>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Javascript</li>
+          <li>Python</li>
+          <li>MS Word</li>
+          <li>MS Powerpoint</li>
+          <li>MS Access</li>
+        </ul>
+      </div>
 
-  <p>
-    <center>
-      <strong>PROFESSIONAL EXPERIENCES</strong>
-    </center>
-    <hr>
-    <strong>Laboratory Assistant & Field Worker|</strong> Genetic Resource Center, IITA, Oyo, Nigeria Feb 2018 - Jul 2018
-  <ul>
-    <li>Within my 6 months of employment at IITA, I served as Field Worker, for 2 months and 3 weeks, and
-      was then transferred to the subdivision, Bioscience as a Laboratory Assistant.</li>
-    <li>Managing the field and crops, and ensuring genetic purity in the maize field.
-      In the laboratory, I was charged with maintaining a clean environment and assisting in data collection
-      and some basic laboratory experiments.</li>
-    <li>I partook in managing the land and field crops, collecting morphological data and occasionally,
-      manually pollinating maize crops to ensure genetic purity. Occasionally, I was also involved in manually
-      clearing the field for the next planting, and also partook in the planting of the maize crops.
-      Maintained detailed logs of all experiments and relevant data and updated databases with new
-      information. Also, I was eventually give permission to carry out DNA extraction from different leaf
-      samples and these DNA samples were checked on agarose gel for impurities using Agarose-Gel
-      Electrophoresis.</li>
-  </ul>
-  </p>
-  <br>
-  <p>
-    <strong>Laboratory Assistant |</strong> Olutunu Medical Center, Ogun State, Nigeria Intermittently between 2013-2017
-  <ul>
-    <li>My job was to assist in the laboratory, keeping it clean and also assisting in running test
-    <li>Upon hiring, the health center had just one laboratory worker and I was charged with relieving the workload
-      and still providing accurate result.</li>
-    <li>I served at the health center assisting in the laboratory to run medical tests like pregnancy test, malaria tests,
-      typhoid tests, blood cell count and a few others.</li>
-    <li>In my final weeks till, the laboratory worker was let go, and I was charged with carrying out all tests by myself
-      till a replacement arrived.</li>
-  </ul>
-  </p>
-  <br>
-  <p><strong>Laboratory Assistant |</strong> Federal Institute of Industrial Research Oshodi, Lagos Nigeria Jun 2017 - Jul 2017
-  <ul>
-    <li>Maintained a sterile work area</li>
-    <li>Observed researcher work and took notes on findings</li>
-  </ul>
+      <hr class="headerruler">
+      <div class="skill-row">
+        <img class="" src="" alt="">
+        <h3>Professional Experience</h3>
+        <strong>Laboratory Assistant & Field Worker|</strong> Genetic Resource Center, IITA, Oyo, Nigeria Feb 2018-Jul 2018
+        <hr>
+        <ul class="experienced">
+          <li>Within my 6 months of employment at IITA, I served as Field Worker, for 2 months and 3 weeks, and
+            was then transferred to the subdivision, Bioscience as a Laboratory Assistant.</li>
+          <li>Managing the field and crops, and ensuring genetic purity in the maize field.
+            In the laboratory, I was charged with maintaining a clean environment and assisting in data collection
+            and some basic laboratory experiments.</li>
+          <li>I partook in managing the land and field crops, collecting morphological data and occasionally,
+            manually pollinating maize crops to ensure genetic purity. Occasionally, I was also involved in manually
+            clearing the field for the next planting, and also partook in the planting of the maize crops.
+            Maintained detailed logs of all experiments and relevant data and updated databases with new
+            information. Also, I was eventually give permission to carry out DNA extraction from different leaf
+            samples and these DNA samples were checked on agarose gel for impurities using Agarose-Gel
+            Electrophoresis.</li>
+        </ul>
+        </p>
+        <br>
+        <p>
+          <strong>Laboratory Assistant |</strong> Olutunu Medical Center, Ogun State, Nigeria Intermittently between 2013-2017
+          <hr>
+        <ul class="experienced">
+          <li>My job was to assist in the laboratory, keeping it clean and also assisting in running test
+          <li>Upon hiring, the health center had just one laboratory worker and I was charged with relieving the workload
+            and still providing accurate result.</li>
+          <li>I served at the health center assisting in the laboratory to run medical tests like pregnancy test, malaria tests,
+            typhoid tests, blood cell count and a few others.</li>
+          <li>In my final weeks till, the laboratory worker was let go, and I was charged with carrying out all tests by myself
+            till a replacement arrived.</li>
+        </ul>
+        </p>
+        <br>
+        <p><strong>Laboratory Assistant |</strong> Federal Institute of Industrial Research Oshodi, Lagos Nigeria Jun 2017 - Jul 2017
+          <hr>
+        <ul class="experienced">
+          <li>Maintained a sterile work area</li>
+          <li>Observed researcher work and took notes on findings</li>
+        </ul>
 
-  <p><strong>Assistant Computer Teacher |</strong> The Ambassadors College, Ota, Ogun State, Nigeria May 2016 - Jul 2016
-  <ul>
-    <li>I was employed assist in the instruction of students from Grade 7 – Grade, and also students in SS1, in their Computer Science classes.</li>
-    <li>I was expected to provide answers to their questions and provide instructional guidance during their
-      practical sessions.</li>
-    <li>I made myself available for questions and corrections during class hours and other hours. So much so I
-      occasionally assisted in Mathematics and Biology.</li>
-    <li>As I was not granted to the student’s result, I can only say I believe I had positive on their thinking of
-      their studies and their abilities in the courses I was involved in.</li>
-  </ul>
-  </p>
-  <br>
-  <br>
-  <center>
-    <strong>LEADERSHIP EXPERIENCES</strong>
-    <hr>
-  </center>
-  <p>
-    <strong>General Secretary for NACOS|</strong> Bells University of technology February 2021- Present
-  <ul>
-    <li>I am serving as Computer science and Information technology representative across all levels in the school,
-      including masters. Managing student tutorials, organizing competitive events and liaising with the school on
-      behalf of colleagues.</li>
-    <li>I had a mission of bridging the gap among all NACOS levels in the school, and also try my best to increase
-      academic performance across levels.</li>
-    <li>As the President and Vice-president were out of school on internship, I spearheaded my team fellow
-      executives in organizing, campaigning and eventually celebrating an outstanding event that cut across the
-      whole school, not just NACOS. I also reached out to respective level heads to ascertain the courses where
-      they needed assistance and set up adequate tutorial classes held by pairs of other NACOS members.</li>
-    <li>As a result of the event and the tutorial sessions, NACOS members amongst all levels became for familiar
-      with each other, and although semester results have not yet been released, people who participate in the
-      tutorials have reached out and seem more confident in their abilities.</li>
-  </ul>
-  </p>
-  <p><strong>Course Representative|</strong> Computer Science and Information Technology 2018 set Jan 2018 – Present
-  <ul>
-    <li>I am serving as the representative for Computer Science and Information Technology for 2018 entry set and
-      2019 direct entry set.</li>
-    <li>Recording of appearances in classeswith lecturers and department on behalf of students.</li>
-    <li>Strategically grouping class members with equity.</li>
-    <li>Sourcing and scheduling of tutorial classes.</li>
-  </ul>
-  
-  </p>
+        <p><strong>Assistant Computer Teacher |</strong> The Ambassadors College, Ota, Ogun State, Nigeria May 2016 - Jul 2016
+          <hr>
+        <ul class="experienced">
+          <li>I was employed assist in the instruction of students from Grade 7 – Grade, and also students in SS1, in their Computer Science classes.</li>
+          <li>I was expected to provide answers to their questions and provide instructional guidance during their
+            practical sessions.</li>
+          <li>I made myself available for questions and corrections during class hours and other hours. So much so I
+            occasionally assisted in Mathematics and Biology.</li>
+          <li>As I was not granted to the student’s result, I can only say I believe I had positive on their thinking of
+            their studies and their abilities in the courses I was involved in.</li>
+        </ul>
+        </p>
+        <br>
+        <br>
+      </div>
+    </div>
+    <hr class="headerruler">
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <hr class="headerruler">
+      <h3>I am availbale for jobs and you can reach me at any of my below listed contacts.</h3>
+      <a class="gmail" href="mailto: jpfatoks@gmail.com">EMAIL</a>
+    </div>
+  </div>
 
-  <hr>
-  <table class="fixed_headers">
-    <thead>
-      <tr>
-        <th>Job</th>
-        <th>Job Description</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>General Secretary for NACOS|</strong> Bells University of technology
-          <br> February 2021- Present
-        </td>
-        <td>
-          <ul>
-            <li>I am serving as Computer science and Information technology representative across all levels in the school,
-              including masters. Managing student tutorials, organizing competitive events and liaising with the school on
-              behalf of colleagues.</li>
-            <li>I had a mission of bridging the gap among all NACOS levels in the school, and also try my best to increase
-              academic performance across levels.</li>
-            <li>As the President and Vice-president were out of school on internship, I spearheaded my team fellow
-              executives in organizing, campaigning and eventually celebrating an outstanding event that cut across the
-              whole school, not just NACOS. I also reached out to respective level heads to ascertain the courses where
-              they needed assistance and set up adequate tutorial classes held by pairs of other NACOS members.</li>
-            <li>As a result of the event and the tutorial sessions, NACOS members amongst all levels became for familiar
-              with each other, and although semester results have not yet been released, people who participate in the
-              tutorials have reached out and seem more confident in their abilities.</li>
-          </ul>
-        </td>
-      </tr>
-    </tbody>
 
-  </table>
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="tel: +2347085784087">Phone</a>
+    <a class="footer-link" href="https://instagram.com/mrfatokun?utm_medium=copy_link">Instagram</a>
+    <p>© 2022 Pelumi Fatokun.</p>
+  </div>
+
 </body>
 
 </html>
